# ChangeLog for gnome-extra/gnome-power-manager
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-power-manager/ChangeLog,v 1.85 2008/03/02 14:32:07 leio Exp $

  02 Mar 2008; Mart Raudsepp <leio@gentoo.org>
  gnome-power-manager-2.20.2.ebuild:
  Readd alpha, ia64 and sparc keywords with permission - they should have
  never been dropped for 2.20.2

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-power-manager-2.20.2.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome-power-manager-2.20.2.ebuild:
  stable x86, bug 208366

*gnome-power-manager-2.20.2 (22 Dec 2007)

  22 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-power-manager-2.20.2.ebuild:
  bump to 2.20.2

  13 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  gnome-power-manager-2.16.3.ebuild:
  fix quoting issues

  13 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/gpm-2.18.3-slotted-gstreamer.patch,
  -gnome-power-manager-2.18.3.ebuild, -gnome-power-manager-2.18.3-r1.ebuild:
  prune unused versions

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  gnome-power-manager-2.20.0-r1.ebuild:
  Stable for HPPA (bug #199740).

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  gnome-power-manager-2.18.3-r1.ebuild:
  Stable for HPPA (bug #199322).

  24 Nov 2007; Brent Baude <ranger@gentoo.org>
  gnome-power-manager-2.20.0-r1.ebuild:
  Marking gnome-power-manager-2.20.0-r1 ppc stable for bug 199740

*gnome-power-manager-2.20.1 (23 Nov 2007)

  23 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +gnome-power-manager-2.20.1.ebuild:
  Version bump from upstream

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  gnome-power-manager-2.20.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +files/gnome-power-manager-2.16.3-doc.patch,
  gnome-power-manager-2.16.3.ebuild: