@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST evolution-webcal-2.12.0.tar.bz2 193553 RMD160 5f4de89092bc949eda41c03f5c77e5c7cea55700 SHA1 8bdb0ea760e6e92aa19be99c33ed0aa3a2607c89 SHA256 f8445c3d93af4f8f4f325c5eb3fa94093f9eb299171a0983056d069e9658fc00
+DIST evolution-webcal-2.21.92.tar.bz2 199394 RMD160 641acb467344730d6f572afe2005e9fce1d1c22b SHA1 c231b815d72df775bf05605c870f848b027aa3dc SHA256 c583707d338edf7957a2f92804901569c9f6c1b2d16ba3682b92ba96fa300dca
 EBUILD evolution-webcal-2.12.0.ebuild 778 RMD160 164219c3f4bdc4222637c7c401bdd876007d070e SHA1 d4549fa7b3d7e08d6c34538f866be165da3e6509 SHA256 1ce8331e9c14db540876097a77be36875d354b13af4c6126ad1798bb62cfc948
-MISC ChangeLog 10571 RMD160 2db674abba27aab51ac47f0d81e07d7ae7aaebc4 SHA1 1062b7639296c2c7d5b473fdadc83f05460d9fc6 SHA256 f10aac34bb41d0a7c70df92d5d6d246846d7200d9aaf05c9bba9c24827593cb4
+EBUILD evolution-webcal-2.21.92.ebuild 763 RMD160 bcb2b834a9b235691bbe3b19036b748781ee4fa1 SHA1 fc791ac0183991be792bd28867cc39209c33cdcd SHA256 115be9fed01fa8060fd219bc995eefafefdde5ede4b3e60e349b47c82e506e2a
+MISC ChangeLog 10761 RMD160 5cdb8ae585455043fff2579c097429ffb55f9e55 SHA1 6c8ef9690825ef04822253eb3f2a66ccc76735cd SHA256 8d3ab43d46705d7d365005a7a71fd5dcf4886b54c34ce7f11577646908f272df
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.8 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iEYEARECAAYFAkfVuWYACgkQkeYb6olFHJcOxQCg0mcQOcoCIt6PSj8SbU1Ue97f
-Y0gAoMxifG5yyHrwu5GarOb/iLY6e+hJ
-=iZed
+iD8DBQFH6tDG1fmVwcYIWAYRAjboAKC6Gs3jyiIXn0Eifuzb4mT7rxs5EgCgwrtq
+EPAJjUXuNvBlMUXVWQC07vA=
+=9b+Z
 -----END PGP SIGNATURE-----
