@@ -6,16 +6,18 @@ DIST gnome-power-manager-2.16.3.tar.gz 2382038 RMD160 97a93de5904e9c01567ba8eed6
 DIST gnome-power-manager-2.20.0.tar.bz2 2588839 RMD160 6f5cc9e9c57c1e913f0ef8a1d2d16784194bbd45 SHA1 117e8f5bc81ae81a110052df173eb75d87b08049 SHA256 bc1a3428bc98bfcab473e0f62387f32205c40693f6c6897931204ef4800aa1e5
 DIST gnome-power-manager-2.20.1.tar.bz2 2592825 RMD160 1ce9ff026cbadd8ab7473ca3f328e1210fb99d05 SHA1 ebee92e53827982993de3aa9dc6bb3283f7ce1fe SHA256 49b9bd62e521f08eae5cf1eb8fa4b1c7440ddfb664e16833af5fd13b97bc7d80
 DIST gnome-power-manager-2.20.2.tar.bz2 3020529 RMD160 d798acf683c74901465caf4b144a3cf40dd33eab SHA1 7cda3b71ae8ccc5825f194b6865326b9727f0da9 SHA256 60c9f8e6893123d1837f3cd1fcf834e66bc6f69b9efea5e590b1a9a97e1850c2
+DIST gnome-power-manager-2.22.0.tar.bz2 2999358 RMD160 f29c630d1f8cd287cb49f09f72f30d065178a5cd SHA1 dc47ee5ab84a50dac307defc65635eff6cb3de10 SHA256 a28500e52844286ef85f7fc773151be62c9cf6ce10ad51eceec99aa57304e70b
 EBUILD gnome-power-manager-2.16.3.ebuild 2200 RMD160 0bd2ff57cd7a102afe706cd633aed25a9e69f73d SHA1 64a8f083c6634e989e211e4963c94dda146e8730 SHA256 c4e73b46448b22e712173ad1ad019633ebc578dd831ff6d4ab03ae86126ff9a1
 EBUILD gnome-power-manager-2.20.0-r1.ebuild 2737 RMD160 582a0acf497ceedffb2a3d110a67e9b62dd2f581 SHA1 0f303f1ed03b7f271358c2c017a101c95cf777a0 SHA256 0c3158d15623ebee741f574478bc8278f0cb0ba8c6c3f7be0c048a4c21da6503
 EBUILD gnome-power-manager-2.20.1.ebuild 2439 RMD160 453483baf51b25b78dd78b7b34fb6c26688f5ee2 SHA1 baf4c4fb29a33b6b143c6a0723f11d1f12d4db93 SHA256 b6a4672288468325734eb852bffc10ca7eaf5000b2c0435eb4bde900423b44cc
 EBUILD gnome-power-manager-2.20.2.ebuild 2473 RMD160 70d593078b9df3e8ae1a73a7389c452379cf9d72 SHA1 d3f5eb7271425deb769d1a2f4a11044e978b45c7 SHA256 f23f5b8b9022544512e0d568cb981626af9a642a8c705e43ec07fe0ac3e9d3b2
-MISC ChangeLog 13185 RMD160 e483b883af145e85c3ae64427e604709b6d7f711 SHA1 3d5ba8bbe0fb86a485445266d475b53680ad00cb SHA256 604588152b77dfb90744c60c4aaf25af92a8f227ddc530537b9a18ec1f4089fb
+EBUILD gnome-power-manager-2.22.0.ebuild 2474 RMD160 cccc385b70e8d8ce51cdfdc79f8eb90b698c3163 SHA1 657b10211b8bde3acbcd3d11dec0166fe6ab0162 SHA256 820b5772c72f99abc57029f20804d0342d5bebe87866d80661c14ff996c3c292
+MISC ChangeLog 13404 RMD160 47563fd841352ee76219fdc017f16deb7b1692de SHA1 bbcd70945a00963f39123e4d488f0d61964f0589 SHA256 19d43d706fa4c5f7b5dab63e6066462236df456b51c1753952aa9243c20886b8
 MISC metadata.xml 328 RMD160 e83b5cef91422ece7e4991cc9f9422220d36b775 SHA1 c25df9c021e54eaf6c9add8db1c9954ac710b95e SHA256 2507b21284e65f9e7f5608d9865921192d0d6cdf46a35a705b0b2cb220583794
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.8 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iEYEARECAAYFAkfKui0ACgkQkeYb6olFHJf4rgCaA1ZDVx2FcL0uDuAwFv3h4OPA
-YbsAnizixiTl6+GYXy1ceBF6naqvBGUH
-=Z+Qw
+iD8DBQFH6s/Q1fmVwcYIWAYRAgxvAKCTk2l6aevzq9e7QAKooU9LdFXRWQCdGeDl
+6WhWVRa3i1e7peUnmmlo8FE=
+=1Nz4
 -----END PGP SIGNATURE-----
